--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -51,5 +51,9 @@
 	<string>This app needs access to your microphone to record audio for your videos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access to your photo library to save and share your videos.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs access to save videos to your photo library.</string>
+	<key>NSVideoSubscriberAccountUsageDescription</key>
+	<string>This app uses video recording features.</string>
 </dict>
 </plist>
