--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "scss.validate": false,
   "css.customData": [
     ".vscode/css_custom_data.json"
-  ]
+  ],
+  "typescript.autoClosingTags": false
 }
