--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "seed:tags": "tsx src/db/seedTags.ts",
     "seed:thoughts": "tsx src/db/seedThoughts.ts",
     "seed:user-tags": "tsx src/db/seedUserTags.ts",
-    "seed": "yarn seed:users && yarn seed:tags && yarn seed:thoughts && yarn seed:user-tags",
+    "seed:event-themes": "tsx scripts/seed-event-themes.ts",
+    "seed": "yarn seed:users && yarn seed:tags && yarn seed:thoughts && yarn seed:user-tags && yarn seed:event-themes",
     "cap": "cap",
     "android:build": "next build && npx cap sync android && npx cap build android",
     "android:dev": "next build && npx cap sync android && npx cap run android",
