--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fix-permissions": "node fix-native-permissions.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.893.0",
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "^6.0.1",
     "@capacitor/camera": "^6.1.2",
